[tool.ruff]
target-version = "py310"
line-length = 110

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.poetry]
version = "0.0.0"

[project]
classifiers = []
dynamic = ["dependencies", "version"]
name = "ngeo"
description = "AngularJS OpenLayers Library"
authors = [{name = "Camptocamp",email = "info@camptocamp.com"}]
